<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/two_measures"
            tools:context=".dataentry.presentation.DataEntryFragment">

            <TextView
                android:id="@+id/text_data_entry_addresses"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_entry_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_data_entry_starting_point"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_measures"
                android:text="@string/data_entry_starting_point"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_data_entry_addresses" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_data_entry_starting_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_measure"
                android:layout_marginTop="@dimen/two_measures"
                android:layout_marginEnd="@dimen/half_measure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_data_entry_starting_point">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/fragment_data_entry_starting_point"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:background="@color/colorAccent"
                    tools:layout="@layout/place_autocomplete_fragment"
                    tools:layout_height="@dimen/six_measures" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_data_entry_destination"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_measures"
                android:text="@string/data_entry_destination"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_data_entry_starting_point" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_data_entry_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_measure"
                android:layout_marginTop="@dimen/two_measures"
                android:layout_marginEnd="@dimen/half_measure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_data_entry_destination">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/fragment_data_entry_destination"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_data_entry_destination"
                    tools:background="@color/colorAccent"
                    tools:layout="@layout/place_autocomplete_fragment"
                    tools:layout_height="@dimen/six_measures" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_data_entry_shafts"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_measures"
                android:text="@string/data_entry_number_of_shafts"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_data_entry_destination" />

            <SeekBar
                android:id="@+id/seek_bar_data_entry_truck_shaft"
                android:layout_width="@dimen/no_measure"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_measures"
                android:max="9"
                android:progress="2"
                app:layout_constraintEnd_toStartOf="@+id/text_data_entry_shaft_number_display"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_data_entry_shafts" />

            <TextView
                android:id="@+id/text_data_entry_shaft_number_display"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="@dimen/three_measures"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/data_entry_default_number_of_shafts_value"
                app:layout_constraintBottom_toBottomOf="@+id/seek_bar_data_entry_truck_shaft"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/seek_bar_data_entry_truck_shaft"
                tools:text="2" />

            <TextView
                android:id="@+id/text_data_values"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_measures"
                android:text="@string/data_entry_costs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seek_bar_data_entry_truck_shaft" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_data_entry_average_consumption"
                android:layout_width="@dimen/no_measure"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_measures"
                android:layout_marginEnd="@dimen/one_measure"
                android:drawablePadding="@dimen/one_measure"
                app:layout_constraintEnd_toStartOf="@+id/guideline_data_entry"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_data_values"
                app:startIconDrawable="@drawable/ic_local_gas_station_black_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_data_entry_average_consumption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/data_entry_hint_average_consumption"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_data_entry_fuel_price"
                android:layout_width="@dimen/no_measure"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/one_measure"
                android:layout_marginTop="@dimen/two_measures"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/guideline_data_entry"
                app:layout_constraintTop_toBottomOf="@+id/text_data_values"
                app:startIconDrawable="@drawable/ic_attach_money_black_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_data_entry_fuel_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/data_entry_fuel_price"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_calculate_route"
                android:layout_width="@dimen/no_measure"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_measures"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/data_entry_button"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_data_entry_fuel_price"
                app:layout_constraintVertical_bias="1.0" />

            <FrameLayout
                android:id="@+id/container_loading_wheel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/white"
                android:visibility="gone"
                android:elevation="@dimen/four_measures"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone">

                <ProgressBar
                    android:id="@+id/loading_wheel"
                    android:layout_width="@dimen/six_measures"
                    android:layout_height="@dimen/six_measures"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_round_borders" />
            </FrameLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_data_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
